--- a/BulkyWebRazor_Temp/appsettings.json
+++ b/BulkyWebRazor_Temp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection1": "Server=LAPTOP-OR4GUGIG;Database=Bulky_Razor;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
